# dloop

./: .byedroid.toml.example  .loopcat.toml.example  Cargo.toml  Makefile  README.md
benches/: rendering_bench.rs
src/: action.rs  adb.rs  app.rs  cli.rs  event.rs  main.rs  tui.rs
src/modules/: build.rs  config.rs  device.rs  doctor.rs  init.rs  logcat.rs  mirror.rs  mod.rs  project.rs
src/ui/: build_history_popup.rs  build_pane.rs  crash_detail.rs  device_popup.rs  devices_pane.rs  help_popup.rs  info_bar.rs  level_picker.rs  logcat_pane.rs  mod.rs  package_picker.rs  picker_overlay.rs  status_bar.rs
tests/: performance_test.rs
