[package]
name = "loopcat"
version = "0.1.0"
edition = "2021"
description = "Droid Loop TUI — Android build, install, and log workflows in the terminal"
license = "MIT"
repository = "https://github.com/cesarferreira/loopcat"
readme = "README.md"

[[bin]]
name = "dloop"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"
regex = "1"
which = "8"
dirs = "6"
